--- a/criar.css
+++ b/criar.css
@@ -81,21 +81,21 @@
 
 
 .menu:link {
-    font: Impact;
+    font-family: 'Raleway', sans-serif;
     color: #000000;
     text-decoration: none;
     font-size: 20px;
 }
 
 .menu:visited{
-    font: Impact;
+    font-family: 'Raleway', sans-serif;
     color: #000000;
     text-decoration: none;
     font-size: 20px;
 }
 
 .menu:hover{
-    font: Impact;
+    font-family: 'Raleway', sans-serif;
     color: #000000;
     text-decoration: none;
     font-size: 20px;
