--- a/css/perfil.css
+++ b/css/perfil.css
@@ -18,38 +18,30 @@
 	
 }
 
-#perfil {
+#logo {
 	margin-right:6.6%;
-}
-
-#chat {
-	margin-right:6.6%;
-}
-
-#biblioteca {
-	margin-right:6.6%;
-}
-
-#ideias {
-	margin-right:6.6%;
-}
-
-#notification {
-	margin-right:6.6%;
-}
-
-#settings {
-	margin-right:6.6%;
-}
-
-#criar {
-	margin-right:6.5%;
+	
 }
 
 #lupa {
-	margin-right:6.5%;
+    margin-right:6.5%;
+    
 }
 
+#biblioteca {
+    margin-right:6.6%;
+    
+}
+
+#criar {
+    margin-right:6.5%;
+    
+}
+
+#settings {
+    margin-right:6.6%;
+    
+}
 
 #topo ul li {
    	display: inline;
@@ -189,11 +181,6 @@ p {
 	margin-right: 64%;
 }
 
-#flor1 {
-	position:relative;
-	left: -43.4%;
-	top:-55%;	
-}
 .seguidores {
 	background-color: #63B8FF;
 	height: 60%;
@@ -238,13 +225,6 @@ p {
 	color: white;
 	text-decoration: none;
     background-color: #708090;
-}
-
-
-#flor2 {
-	position:relative;
-	left: -225%;
-	top: 3.6%;	
 }
 
 .seguindo{
@@ -380,3 +360,37 @@ p {
 	margin-left: 35%;
 }
 
+#divBusca{
+  background-color: #FFFFFF;
+  border:solid 2px #FFFFFF;
+  border-radius:10px;
+  width:300px;
+  height:32px;
+  float:right;
+}
+
+#txtBusca{
+  float:left;
+  background-color:transparent;
+  padding-left:5px; 
+  font-size:18px;
+  border:none;
+  height:32px;
+  width:191px;
+}
+
+#btnBusca{
+  border:none;
+  float:left;
+  height:32px;
+  border-radius:0 7px 7px 0;
+  width:70px;
+  font-weight:bold;
+  background:#63B8FF;
+}
+
+#divBusca img{
+  float:left;
+  height: 32.3px;
+  width: 32.3px;
+}
