--- a/css/config.css
+++ b/css/config.css
@@ -20,19 +20,15 @@
 	margin-right:6.6%;
 }
 
-#lupa {
-    margin-right:6.5%;
-}
-
-#biblioteca {
+#userc {
     margin-right:6.6%;
 }
 
-#criar {
+#config {
     margin-right:6.5%;
 }
 
-#settings {
+#logout {
     margin-right:6.6%; 
 }
 
