--- a/css/create.css
+++ b/css/create.css
@@ -24,11 +24,11 @@
     margin-right:6.6%;
 }
 
-#- {
+#troca {
     margin-right:6.5%;
 }
 
-#settings {
+#chat {
     margin-right:6.6%; 
 }
 
@@ -97,95 +97,6 @@ div {
    	border-radius: 5px;	
 }
 #
-#caixas {
-    width: 80%;
-    height: 200px;
-    margin: 0 auto;
-    background:#000;
-
-}
-
-.img1 {
-    width: 25em;
-    height: 25em;
-    padding-left: 2em;
-    padding-right: 1em;
-    padding-top: 0em;
-    padding-bottom: 1.5em;
-	border-radius: 17%;
-	cursor: pointer;
-	transition: 0.3s;
-	
-}
-
-.img2 {
-    width: 25em;
-    height: 25em;
-    padding-left: 1em;
-    padding-right: 1em;
-    padding-top: 0em;
-    padding-bottom: 1.5em;
-	border-radius: 17%;
-	cursor: pointer;
-	transition: 0.3s;	
-}
-
-.img3 {
-    width: 25em;
-    height: 25em;
-    padding-left: 1em;
-    padding-right: 2em;
-    padding-top: 0em;
-    padding-bottom: 1.5em;
-	border-radius: 17%;
-	cursor: pointer;
-	transition: 0.3s;	
-}
-
-.img4 {
-    width: 25em;
-    height: 25em;
-    padding-left: 2em;
-    padding-right: 1em;
-    padding-top: 0em;
-    padding-bottom: 2.5em;
-	border-radius: 17%;
-	cursor: pointer;
-	transition: 0.3s;
-	
-}
-
-.img5 {
-    width: 25em;
-    height: 25em;
-    padding-left: 1em;
-    padding-right: 1em;
-    padding-top: 0em;
-    padding-bottom: 2.5em;
-	border-radius: 17%;
-	cursor: pointer;
-	transition: 0.3s;
-}
-
-.img6 {
-    width: 25em;
-    height: 25em;
-    padding-left: 1em;
-    padding-right: 2em;
-    padding-top: 0em;
-    padding-bottom: 2.5em;
-	border-radius: 17%;
-	cursor: pointer;
-	transition: 0.3s;
-}
-
-.img1:hover {opacity: 0.7;}
-.img2:hover {opacity: 0.7;}
-.img3:hover {opacity: 0.7;}
-.img4:hover {opacity: 0.7;}
-.img5:hover {opacity: 0.7;}
-.img6:hover {opacity: 0.7;}
-
 h1 {
 	text-align: center;
 	color: white;
