--- a/css/logado.css
+++ b/css/logado.css
@@ -102,7 +102,6 @@ div {
     height: 200px;
     margin: 0 auto;
     background:#000;
-
 }
 
 .img1 {
@@ -115,7 +114,19 @@ div {
 	border-radius: 17%;
 	cursor: pointer;
 	transition: 0.3s;
-	
+}
+
+#historia1{
+   position: absolute;
+   top: 170px;
+   left: 120px;
+   width: 100%;
+   margin: 0 auto;
+   width: 300px;
+   height: 50px;
+   font-family: 'Raleway', sans-serif;
+   font-size: 50px;
+   font-color: white;
 }
 
 .img2 {
